--- a/wiki/PLAN.wiki
+++ b/wiki/PLAN.wiki
@@ -1,5 +1,5 @@
 = 翻译计划 =
-    * [O] Vimwiki (hotoo.cn@gmail.com,lizaib@gmail.com)
+    * {O} Vimwiki (hotoo.cn@gmail.com,lizaib@gmail.com)
         [http://code.google.com/p/vimwiki/ on GoogleCode.com]
         [http://www.vim.org/scripts/script.php?script_id=2226 on Vim.org]
     * [.] snipMate (hotoo.cn@gmail.com)
