--- a/wiki/PLAN.wiki
+++ b/wiki/PLAN.wiki
@@ -1,8 +1,8 @@
 = 翻译计划 =
-    * {O} Vimwiki (hotoo.cn@gmail.com,lizaib@gmail.com)
+    * {O} Vimwiki (hotoo.cn{AT}gmail.com,lizaib{AT}gmail.com)
         [http://code.google.com/p/vimwiki/ on GoogleCode.com]
         [http://www.vim.org/scripts/script.php?script_id=2226 on Vim.org]
-    * {.} snipMate (hotoo.cn@gmail.com)
+    * {.} snipMate (hotoo.cn{AT}gmail.com)
         [http://code.google.com/p/snipmate/ on GoogleCode.com]
         [http://github.com/msanders/snipmate.vim on Github.com]
         [http://www.vim.org/scripts/script.php?script_id=2540 on Vim.org]
