--- a/wiki/PLAN.wiki
+++ b/wiki/PLAN.wiki
@@ -1,6 +1,8 @@
 = 翻译计划 =
-    * {O} Vimwiki (hotoo.cn{AT}gmail.com,lizaib{AT}gmail.com)
+    * {O} [http://code.google.com/p/vim-script-cn/source/browse/trunk/doc/vimwiki.cnx Vimwiki.cnx] (hotoo.cn{AT}gmail.com,lizaib{AT}gmail.com)
+
         [http://code.google.com/p/vimwiki/ on GoogleCode.com]
+
         [http://www.vim.org/scripts/script.php?script_id=2226 on Vim.org]
     * {.} snipMate (hotoo.cn{AT}gmail.com)
         [http://code.google.com/p/snipmate/ on GoogleCode.com]
