--- a/intro-wiki/script_2150.CSS_Color_Preview.wiki
+++ b/intro-wiki/script_2150.CSS_Color_Preview.wiki
@@ -15,4 +15,4 @@ http://lanpartei.de/~niklas/vim/after/syntax/css-color-vim.png
 
 将 css.vim 下载并放至 .vim/after/syntax/css.vim 即可。
 
-备注：因为命名的颜色值白色(white)会将CSS属性 white-space 的white部分背景色显示为白色，影响正常的CSS语法高亮，而白色又比较容易识别记忆，所以可以注释掉第163行，或者直接下载这个 [http://hotoo.googlecode.com/svn/trunk/vim/vimfiles/after/syntax/css.vim css.vim] 。
+译者注：因为命名的颜色值白色(white)会将CSS属性 white-space 的white部分背景色显示为白色，影响正常的CSS语法高亮，而白色又比较容易识别记忆，所以可以注释掉第163行，或者直接下载这个 [http://hotoo.googlecode.com/svn/trunk/vim/vimfiles/after/syntax/css.vim css.vim] 。
