--- a/trunk/intro-wiki/index.wiki
+++ b/trunk/intro-wiki/index.wiki
@@ -1,6 +1,5 @@
 
 = Vim 脚本 文档中文计划 =
-
     # [[script_8.VimBuddy|VimBuddy (#8)]]
     # [[script_39.matchit|matchit (#39)]]
     # [[script_1658.NERD_tree|NERD_tree (#1658)]]
@@ -9,3 +8,4 @@
     # [[script_2150.CSS_Color_Preview|CSS Color Preview (#2150)]]
     # [[script_2226.Vimwiki|Vimwiki (#2226)]]
     # [[script_2204.TwitVim|TwitVim (#2204)]]
+    # [[script_2540.snipMate|snipMate (#2540)]]
