--- a/wiki/PLAN.wiki
+++ b/wiki/PLAN.wiki
@@ -2,7 +2,7 @@
     * {O} [http://code.google.com/p/vim-script-cn/source/browse/trunk/doc/vimwiki.cnx Vimwiki.cnx] (hotoo.cn{AT}gmail.com,lizaib{AT}gmail.com)
         [http://code.google.com/p/vimwiki/ on GoogleCode.com]
         [http://www.vim.org/scripts/script.php?script_id=2226 on Vim.org]
-    * {.} snipMate (hotoo.cn{AT}gmail.com)
+    * {X} snipMate (hotoo.cn{AT}gmail.com)
         [http://code.google.com/p/snipmate/ on GoogleCode.com]
         [http://github.com/msanders/snipmate.vim on Github.com]
         [http://www.vim.org/scripts/script.php?script_id=2540 on Vim.org]
