--- a/intro-wiki/index.wiki
+++ b/intro-wiki/index.wiki
@@ -9,3 +9,4 @@
     # [[script_2226.Vimwiki|Vimwiki (#2226)]]
     # [[script_2204.TwitVim|TwitVim (#2204)]]
     # [[script_2540.snipMate|snipMate (#2540)]]
+    # [[script_1238_mark|Mark (#1238)]]
