--- a/wiki/PLAN.wiki
+++ b/wiki/PLAN.wiki
@@ -6,7 +6,7 @@
         [http://code.google.com/p/snipmate/ on GoogleCode.com]
         [http://github.com/msanders/snipmate.vim on Github.com]
         [http://www.vim.org/scripts/script.php?script_id=2540 on Vim.org]
-    * [ ] mark
+    * {X} mark
         [http://www.vim.org/scripts/script.php?script_id=1238 on Vim.org]
     * [ ] matchit
     * [ ] NERD_tree
