--- a/trunk/intro-wiki/script_52.Calendar.wiki
+++ b/trunk/intro-wiki/script_52.Calendar.wiki
@@ -12,8 +12,8 @@
 复制 calendar.vim 到 plugin （Windows: $VIM\vimfiles\plugin\）目录即可。
 
 == 备注 ==
-如果安装了 [script_2226.Vimwiki.html Vimwiki]，会修改日历的默认存储路径为
-g:vimwiki_list 中第一个Wiki，日记会存储到这个目录下的 diary 下。
+如果安装了 [[script_2226.Vimwiki|Vimwiki (#2226)]]，会修改日历的默认存储路径为
+`g:vimwiki_list` 中第一个Wiki，日记会存储到这个目录下的 diary 中。
 
 == 资源 ==
 # [http://www.gracecode.com/archives/674/ 推荐使用 Vim Calendar 插件]
