--- a/wiki/PLAN.wiki
+++ b/wiki/PLAN.wiki
@@ -1,5 +1,5 @@
 = 翻译计划 =
-    * {O} [http://code.google.com/p/vim-script-cn/source/browse/trunk/doc/vimwiki.cnx Vimwiki.cnx] (hotoo.cn{AT}gmail.com,lizaib{AT}gmail.com)
+    * {X} [http://code.google.com/p/vim-script-cn/source/browse/trunk/doc/vimwiki.cnx Vimwiki.cnx] (hotoo.cn{AT}gmail.com,lizaib{AT}gmail.com)
         [http://code.google.com/p/vimwiki/ on GoogleCode.com]
         [http://www.vim.org/scripts/script.php?script_id=2226 on Vim.org]
     * {X} snipMate (hotoo.cn{AT}gmail.com)
