--- a/wiki/PLAN.wiki
+++ b/wiki/PLAN.wiki
@@ -6,7 +6,7 @@
     * [ ] [http://www.vim.org/scripts/script.php?script_id=152 ShowMarks : Visually shows the location of marks.]
     * [ ] [http://www.vim.org/scripts/script.php?script_id=2142 showmarks : Display marks as signs (needs +sign feat )]
     * [ ] [http://www.vim.org/scripts/script.php?script_id=1026 Visual Mark : Visual mark, similar to UltraEdit's bookmark]
-    * [ ] matchit [http://vim-script-cn.googlecode.com/svn/trunk/intro/script_39.matchit.html doc]
+    * [ ] matchit [http://vim-script-cn.googlecode.com/svn/trunk/intro/script_39.matchit.html home]
     * [ ] [http://www.vim.org/scripts/script.php?script_id=1697 surround]
     * [ ] [http://www.vim.org/scripts/script.php?script_id=2136 repeat]
     * [ ] NERD_tree [http://vim-script-cn.googlecode.com/svn/trunk/intro/script_1658.NERD_tree.html home]
