--- a/wiki/PLAN.wiki
+++ b/wiki/PLAN.wiki
@@ -14,7 +14,7 @@
     * [ ] NERD_tree [http://vim-script-cn.googlecode.com/svn/trunk/intro/script_1658.NERD_tree.html home]
     * [ ] NERD_tree Project [http://vim-script-cn.googlecode.com/svn/trunk/intro/script_2801.NERD_tree_Project.html home]
     * [ ] calendar
-    * {O} [http://www.vim.org/scripts/script.php?script_id=42 bufexplorer] [http://code.google.com/p/vim-script-cn/source/browse/trunk/doc/bufexplorer.cnx doc]
+    * {O} [http://www.vim.org/scripts/script.php?script_id=42 bufexplorer] [http://code.google.com/p/vim-script-cn/source/browse/trunk/doc/bufexplorer.cnx doc/bufexplorer.cnx]
     * [ ] [http://www.vim.org/scripts/script.php?script_id=2620 NeoComplCache] [http://sinolog.it/?p=1399 Vim的终极自动补全插件：NeoComplCache]
     * [ ] [http://www.vim.org/scripts/script.php?script_id=1520 OmniCppComplete]
     * [ ] [http://www.vim.org/scripts/script.php?script_id=3025 Command-T]
