--- a/wiki/PLAN.wiki
+++ b/wiki/PLAN.wiki
@@ -8,11 +8,11 @@
     * [ ] [http://www.vim.org/scripts/script.php?script_id=152 ShowMarks : Visually shows the location of marks.]
     * [ ] [http://www.vim.org/scripts/script.php?script_id=2142 showmarks : Display marks as signs (needs +sign feat )]
     * [ ] [http://www.vim.org/scripts/script.php?script_id=1026 Visual Mark : Visual mark, similar to UltraEdit's bookmark]
-    * [ ] matchit [http://vim-script-cn.googlecode.com/svn/trunk/intro/script_39.matchit.html home]
+    * {o} matchit [http://vim-script-cn.googlecode.com/svn/trunk/intro/script_39.matchit.html home]
     * [ ] [http://www.vim.org/scripts/script.php?script_id=1697 surround]
     * [ ] [http://www.vim.org/scripts/script.php?script_id=2136 repeat]
-    * [ ] NERD_tree [http://vim-script-cn.googlecode.com/svn/trunk/intro/script_1658.NERD_tree.html home]
-    * [ ] NERD_tree Project [http://vim-script-cn.googlecode.com/svn/trunk/intro/script_2801.NERD_tree_Project.html home]
+    * {o} NERD_tree [http://vim-script-cn.googlecode.com/svn/trunk/intro/script_1658.NERD_tree.html home]
+    * {o} NERD_tree Project [http://vim-script-cn.googlecode.com/svn/trunk/intro/script_2801.NERD_tree_Project.html home]
     * [ ] calendar
     * {O} [http://www.vim.org/scripts/script.php?script_id=42 bufexplorer] [http://code.google.com/p/vim-script-cn/source/browse/trunk/doc/bufexplorer.cnx doc/bufexplorer.cnx]
     * [ ] [http://www.vim.org/scripts/script.php?script_id=2620 NeoComplCache] [http://sinolog.it/?p=1399 Vim的终极自动补全插件：NeoComplCache]
@@ -25,6 +25,6 @@
     * [ ] taglist
     * [ ] tasklist
     * [ ] Template
-    * [ ] The DERD Commenter [http://vim-script-cn.googlecode.com/svn/trunk/intro/script_1218.NERD_commenter.html home]
+    * {o} The DERD Commenter [http://vim-script-cn.googlecode.com/svn/trunk/intro/script_1218.NERD_commenter.html home]
     * {X} CSS Color Preview [http://vim-script-cn.googlecode.com/svn/trunk/intro/script_2150.CSS_Color_Preview.html home]
     * {X} vimbuddy [http://vim-script-cn.googlecode.com/svn/trunk/intro/script_8.VimBuddy.html home]
