--- a/wiki/PLAN.wiki
+++ b/wiki/PLAN.wiki
@@ -2,7 +2,7 @@
     * {X} [http://www.vim.org/scripts/script.php?script_id=2226 Vimwiki.vim] [http://code.google.com/p/vimwiki/ 2] [http://vim-script-cn.googlecode.com/svn/trunk/intro/script_2226.Vimwiki.html home] [http://code.google.com/p/vim-script-cn/source/browse/trunk/doc/vimwiki.cnx Vimwiki.cnx] (hotoo.cn{AT}gmail.com,lizaib{AT}gmail.com)
     * {X} [http://code.google.com/p/snipmate/ snipMate.vim] [http://github.com/msanders/snipmate.vim 2] [http://www.vim.org/scripts/script.php?script_id=2540 3] [http://code.google.com/p/vim-script-cn/source/browse/trunk/doc/snipMate.cnx snipMate.cnx] (hotoo.cn{AT}gmail.com)
     * {X} [http://www.vim.org/scripts/script.php?script_id=1238 mark] [http://vim-script-cn.googlecode.com/svn/trunk/intro/script_1238_mark.html home]
-    * [ ] [http://www.vim.org/scripts/script.php?script_id=2657 VOoM] ([http://xbeta.info/vim-voof.htm xbeta])
+    * [ ] [http://www.vim.org/scripts/script.php?script_id=2657 VOoM] ([http://xbeta.info/vim-voof.htm xbeta]) 需要Python支持。
     * [ ] [http://www.vim.org/scripts/script.php?script_id=2899 TxtBrowser] ([http://xbeta.info/vim-txtbrowser.htm xbeta])
     * [ ] [http://www.vim.org/scripts/script.php?script_id=3052 changesPlugin : indicate changes of a buffer]
     * [ ] [http://www.vim.org/scripts/script.php?script_id=152 ShowMarks : Visually shows the location of marks.]
