--- a/intro-wiki/index.wiki
+++ b/intro-wiki/index.wiki
@@ -11,3 +11,4 @@
     # [[script_2540.snipMate|snipMate (#2540)]]
     # [[script_1238_mark|Mark (#1238)]]
     # [[script_52.Calendar|Calendar (#52)]]
+    # [[script_521_MRU|MRU (#521)]]
