--- a/wiki/Translation.wiki
+++ b/wiki/Translation.wiki
@@ -12,11 +12,11 @@ trunk/doc 目录下均只存放被翻译的 .cnx 文档，一般来说，
 大家在 trunk 下直接翻译就好了，无需打分支到 branches 下，当然打分支同样也可以。
 
 == 2. 翻译 ==
-# 在 .cnx 文档的翻译过程中，翻好一段，确认之后就可以删除原始英文内容了。
-    保留不译的部分除外，不要保留原始内容在 .cnx 档中。
-# changelog 可以不译。
-# 尽量保持 Vim doc 格式，一般来说，格式跟原始档一致就可以了，建议在 Vim 中翻译，
-    可以预览格式。
+    # 在 .cnx 文档的翻译过程中，翻好一段，确认之后就可以删除原始英文内容了。
+        保留不译的部分除外，不要保留原始内容在 .cnx 档中。
+    # changelog 可以不译。
+    # 尽量保持 Vim doc 格式，一般来说，格式跟原始档一致就可以了，
+        建议在 Vim 中翻译，可以预览格式。
 
 == 3. 标记(tags) ==
 在 tags 目录下，保留了各个 Plugin 的多个版本翻译记录。比如 vimwiki 就包含
@@ -36,20 +36,20 @@ wiki 目录存放是项目 Wiki，即 http://code.google.com/p/vim-script-cn/w/l
 有好的 Plugin 也请增加到里面。
 
 == 5. 范例 (翻译新文档: plugin.txt v1.0) ==
-# 从 https://vim-script-cn.googlecode.com/svn/ checkout 项目。
-# 复制要翻译的原始文档(plugin.txt 或 plugin.jax) 到 trunk/doc 目录，
-    并重命名为 plugin.cnx
-    # 另复制一份原始档到 tags/doc/plugin_v1.0/plugin.txt
-# 在 plugin.cnx 中进行翻译，完成一段就删除原文（注意先检查一下翻译结果）。
-# 文档不懂的地方可以保留不译，或者请教他人。
-# 可以随时提交，但建议完成较多的内容之后再统一提交。
-# 全部完成后，提交，并打标签(tags)到 tags/doc/plugin_v1.0/plugin.cnx
+    # 从 https://vim-script-cn.googlecode.com/svn/ checkout 项目。
+    # 复制要翻译的原始文档(plugin.txt 或 plugin.jax) 到 trunk/doc 目录，
+        并重命名为 plugin.cnx
+        # 另复制一份原始档到 tags/doc/plugin_v1.0/plugin.txt
+    # 在 plugin.cnx 中进行翻译，完成一段就删除原文（注意先检查一下翻译结果）。
+    # 文档不懂的地方可以保留不译，或者请教他人。
+    # 可以随时提交，但建议完成较多的内容之后再统一提交。
+    # 全部完成后，提交，并打标签(tags)到 tags/doc/plugin_v1.0/plugin.cnx
 
 == 6. 范例 (翻译文档新版本: 从 v1.0 到 v2.0) ==
-# 复制 plugin.txt v2.0 版到 tags/doc/plugin_v2.0/plugin.txt
-# 比较 plugin.txt 原始档 v2.0 和 v1.0 版的变化。
-# 补充/删除/修正不同的部分即可。
-# 完成后提交，并打标签到 tags/doc/plugin_v2.0/plugin.cnx
+    # 复制 plugin.txt v2.0 版到 tags/doc/plugin_v2.0/plugin.txt
+    # 比较 plugin.txt 原始档 v2.0 和 v1.0 版的变化。
+    # 补充/删除/修正不同的部分即可。
+    # 完成后提交，并打标签到 tags/doc/plugin_v2.0/plugin.cnx
 
 == 7. 分工 ==
 对于由多人分工合作翻译的文档，参与者最好事先商定各自负责的内容。
