--- a/wiki/TOC.wiki
+++ b/wiki/TOC.wiki
@@ -1,4 +1,6 @@
 = Table of Content =
-  * [PLAN 翻译计划]
-  * [Translation 翻译方法及技巧说明]
-  * [Installation 安装中文文档]
+  * [PLAN 计划]
+  * [Translation 方法及技巧]
+  * [Installation 安装]
+  * [VimDocSpec 文档规范]
+  * [UsingGoogleCode About Google Code]
